text input and radio buttons

--- a/index.html
+++ b/index.html
@@ -7,5 +7,22 @@
 </head>
 <body>
     <h1>hello</h1>
+    <form>
+        <label for="firstname">First</label>
+        <input id="firstname" name="first_name">
+        <label for="lastname">Last</label>
+        <input id="lastname" name="last_name">
+
+        <label for="vanilla">Vanilla</label>
+        <input type="radio" id="vanilla" name="icecream">
+        <label for="strawberry">Strawberry</label>
+        <input type="radio" id="strawberry" name="icecream">
+        <label for="chocolate">Chocolate</label>
+        <input type="radio" id="chocolate" name="icecream">
+        <label for="sprinkles">Sprinkles</label>
+        <input type="radio" id="sprinkles" name="toppings">
+        <label for="whippedCream">Whipped Cream</label>
+        <input type="radio" id="whippedCream" name="toppings">
+    </form>
 </body>
 </html>
