--- a/index.html
+++ b/index.html
@@ -8,21 +8,57 @@
 <body>
     <h1>hello</h1>
     <form>
-        <label for="firstname">First</label>
-        <input id="firstname" name="first_name">
-        <label for="lastname">Last</label>
-        <input id="lastname" name="last_name">
-
-        <label for="vanilla">Vanilla</label>
-        <input type="radio" id="vanilla" name="icecream">
-        <label for="strawberry">Strawberry</label>
-        <input type="radio" id="strawberry" name="icecream">
-        <label for="chocolate">Chocolate</label>
-        <input type="radio" id="chocolate" name="icecream">
-        <label for="sprinkles">Sprinkles</label>
-        <input type="radio" id="sprinkles" name="toppings">
-        <label for="whippedCream">Whipped Cream</label>
-        <input type="radio" id="whippedCream" name="toppings">
+        <fieldset>
+            <legend>User:</legend>
+            <label for="firstname">First</label>
+            <input id="firstname" name="first_name">
+            <label for="lastname">Last</label>
+            <input id="lastname" name="last_name">
+        </fieldset>
+        <fieldset>
+            <legend>Flavor:</legend>
+            <label for="vanilla">Vanilla</label>
+            <input type="radio" id="vanilla" name="icecream">
+            <label for="strawberry">Strawberry</label>
+            <input type="radio" id="strawberry" name="icecream">
+            <label for="chocolate">Chocolate</label>
+            <input type="radio" id="chocolate" name="icecream">
+        </fieldset>
+        <fieldset>
+            <legend>Size:</legend>
+            <label for="small">Small</label>
+            <input type="radio" id="small" name="size">
+            <label for="medium">Medium</label>
+            <input type="radio" id="medium" name="size">
+            <label for="large">Large</label>
+            <input type="radio" id="large" name="size">
+        </fieldset>
+        <fieldset>
+            <legend>Toppings:</legend>
+            <input type="checkbox" id="sprinkles" name="sprinkles" value="sprinkles">
+            <label for="sprinkles">Sprinkles</label><br>
+            <input type="checkbox" id="whippedCream" name="whippedCream" value="whippedCream">
+            <label for="whippedCream">Whipped Cream</label><br>
+            <input type="checkbox" id="caramel" name="caramel" value="caramel">
+            <label for="caramel">Caramel Sauce</label>
+        </fieldset>
+        <fieldset>
+            <legend>Cup or Cone:</legend>
+            <label for="container">Please Choose One</label>
+            <select name="container" id="container">
+                <option value="cup">Plastic Cup</option>
+                <option value="sugar">Sugar Cone</option>
+                <option value="waffle">Waffle Cone</option>
+                <option value="dippedWaffle">Chocolate Dipped Waffle Cone</option>
+            </select>
+        </fieldset>
+        <fieldset>
+            <legend>Special:</legend>
+            <label for="SpecialRequests">Special Requests:</label>
+            <textarea id="SpecialRequests" name="SpecialRequests" rows="4" cols="10">Allergic to peanuts, substitutions, etc.</textarea>
+        </fieldset>
+        <button type="button" onclick="alert('Go to Checkout!')">Checkout</button>
+        <button type="submit">Submit Order</button>
     </form>
 </body>
 </html>
