--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <h1>hello</h1>
+    <h1>Ice Cream Shoppe</h1>
     <form>
         <fieldset>
             <legend>User:</legend>
@@ -55,7 +55,7 @@
         <fieldset>
             <legend>Special:</legend>
             <label for="SpecialRequests">Special Requests:</label>
-            <textarea id="SpecialRequests" name="SpecialRequests" rows="4" cols="10">Allergic to peanuts, substitutions, etc.</textarea>
+            <textarea id="SpecialRequests" name="SpecialRequests" rows="4" cols="10" placeholder="Allergic to peanuts, substitutions, etc."></textarea>
         </fieldset>
         <button type="button" onclick="alert('Go to Checkout!')">Checkout</button>
         <button type="submit">Submit Order</button>
