--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <textarea id="SpecialRequests" name="SpecialRequests" rows="4" cols="10"
                           placeholder="Allergic to peanuts, substitutions, etc."></textarea>
             </fieldset>
-            <button type="button" onclick="alert('Go to Checkout!')">Checkout</button>
+            <button type="button" onclick="alert('Free today for our Grand Opening!')">Calculate Cost</button>
             <button type="submit">Submit Order</button>
         </form>
     </div>
